--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=pastillero-backend
+
+# Configuración de la base de datos H2 (se guardará en un archivo local)
+spring.datasource.url=jdbc:h2:file:./database
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
+# Habilitar la consola para ver la base de datos en el navegador
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
